# human-data-lib

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  _config.yml  catalog.md  pyproject.toml
docs/: add-entry-checklist.md  catalog-policy.md  landscape.md  schema.md
src/human_data_lib/: __init__.py  catalog.py  cli.py
src/human_data_lib/data/: __init__.py  catalog.schema.json  libraries.json
tests/: test_catalog.py  test_cli.py
tools/: render_catalog_page.py
